add search command to Block List